# sylpheed-icons

./: .gitignore  .travis.yml  Makefile.am  NEWS  README.en.txt  README.ja.txt  README.md  build.sh  configure.ac  sylicons.c  sylicons.h  version.rc
po/: POTFILES.in  ja.po  sylicons.pot
res/: version.rc
src/: Makefile.am  copying.h  sylicons.c  sylicons.h  ui.c
